# steadystate.ai

./: .dockerignore  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  LLM_SAFETY.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
demo/: README.md  ansible-fleet-drift.json  argocd-incident.json  k8s-insecure.json
deploy/: README.md
deploy/discord/: README.md  command.json  register.py
deploy/github-actions/: drift.yml
deploy/kubernetes/: cronjob.yaml  listener.yaml  rbac.yaml
deploy/teams/: README.md
docs/: knowledge-base.md  repo-native-posture.md
examples/: README.md  sample-plan.json
examples/agent-repo/: .gitignore  README.md
examples/agent-repo/steadystate/: requests.json  solutions.json
examples/bastion-host/: README.md
examples/brokered-creds/: README.md
examples/chat-listener/: README.md
examples/ci-terraform/: README.md
examples/contained-agent/: README.md
examples/copilot-ss/: AGENTS.md  README.md
examples/custom-checks/: README.md
examples/demo/: README.md  demo.sh
examples/demo/steadystate/: config.toml  solutions.json
examples/fleet-health/: README.md
examples/k8s-cronjob/: README.md
examples/mcp-copilot/: README.md
examples/repo-native/: README.md
examples/repo-native/steadystate/: config.toml
examples/requests/: README.md  requests.json
examples/solutions/: README.md  solutions.json
src/steadystate/: __init__.py  _http.py  broker.py  catalog.py  classify.py  cli.py  compliance.py  config.py  discover.py  engine.py  evidence.py  guidance.py  health.py  metrics.py  model.py  mutes.py  onboarding.py  plugins.py  reconcile.py  reconcile_state.py  serialize.py  serve.py  silos.py  state.py  sweep.py  targets.py  verbs.py
src/steadystate/act/: __init__.py  ansible.py  approve.py  artifact.py  base.py  bounds.py  breakglass.py  catalog.py  cleanup.py  codify.py  decide.py  execute.py  learn.py  plan.py  reflex.py  requests.py  solution_remedy.py  terraform.py  workflow.py
src/steadystate/domains/: __init__.py  base.py  compliance.py  security.py  security_azure.py  security_gcp.py  security_k8s.py
src/steadystate/inbound/: __init__.py  base.py  discord.py  mcp.py  server.py  slack.py  teams.py  translate.py
src/steadystate/notify/: __init__.py  base.py  console.py  discord.py  github.py  grafana.py  pagerduty.py  prometheus.py  servicenow.py  slack.py  teams.py  webhook.py
src/steadystate/observe/: __init__.py  base.py  kubectl.py
src/steadystate/probe/: __init__.py  ansible_health.py  argocd.py  base.py  custom.py  docker.py  kubectl.py  solutions.py
tests/: test_action_catalog.py  test_analyze.py  test_ansible.py  test_ansible_executor.py  test_ansible_health_probe.py  test_ansible_live.py  test_argocd.py  test_argocd_probe.py  test_artifact.py  test_ask_kb.py  test_audit.py  test_auto_analyze.py  test_bounds.py  test_breakglass.py  test_broker.py  test_capabilities.py  test_catalog.py  test_catalog_actions.py  test_catalog_compose_validate.py  test_chat_cli.py  test_chat_fix_run.py  test_chat_fp_resolution.py  test_chat_homeostat_reads.py  test_chat_nl.py  test_chat_unmute_snooze.py  test_ci.py  test_classify.py  test_cleanup.py  test_cli.py  test_cli_learn.py  test_cli_smoke_health.py  test_cohere.py  test_collect.py  test_committed_mutes.py  test_compliance.py  test_compliance_domain.py  test_config.py  test_console_state.py  test_correlate.py  test_correlators.py  (+93 more)
(+37 files in other folders)
