[project]
name = "steadystate"
dynamic = ["version"]
description = "Stateful monitoring: reconcile declared infrastructure state against reality and reason about the drift."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
steadystate = "steadystate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/steadystate/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/steadystate"]

[tool.ruff]
line-length = 100
target-version = "py311"
